overflow fix

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -7,6 +7,7 @@ body {
 canvas {
   display: block;
   vertical-align: bottom;
+  overflow-x: hidden; 
 }
 /* ---- particles.js container ---- */
 #particles-js {
